-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.11.0-beta1
-
None
-
-
c13b20f1605d51061e60acacb43c7e6502737759 (qt-creator/qt-creator/4.11)
Steps to reproduce:
- have 2 valid kits available
- have an existing project without *.user file
- open it and select both kits for on the target setup page, hit Configure
- you should be on Edit mode now
- build it once (not sure if necessary)
- go to Options -> Kits
- set all compilers of the kits to None
- hit OK
- go to Project view
- this should look bad now
- go to Options -> Kits
- remove both kits (starting with the default one)
- hit OK
Current result:
- QC crashes (I could not reliably reproduce but got back traces - see attachment)
Seems the handleTargetChanged() signal may be processed too late (after the handleTargetRemoved() had been processed already and the target does no more exist)
| For Gerrit Dashboard: QTCREATORBUG-23075 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 277478,2 | Target setup page: Do not dereference potentially invalid Target pointer | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 278346,2 | Target setup page: Un-queue connection to kit manager | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |