Target setup page: Do not dereference potentially invalid Target pointer

Fixes: QTCREATORBUG-23075
Change-Id: I60d332b3ff18cf7c83e63cb87730b44ee2a47502
Reviewed-by: Christian Stenger <christian.stenger@qt.io>